# templates

./: README.md  create-project.sh
.github/workflows/: ci.yml
vscode-python/: Dockerfile  docker-compose.yml  pyproject.toml
vscode-python/.devcontainer/: devcontainer.json  docker-compose.yml
vscode-python/images/: dev.Dockerfile  pyproject.toml
vscode-python/src/: Dockerfile  pyproject.toml
