[tool.poetry]
name = "dev"
version = "0.1.0"
description = ""
authors = ["jandremarais <maraisjandre9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
mypy = "^0.761"
flake8 = "^3.7.9"
pre-commit = "^1.21.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
